# clc_ros

./: README.md  lsd_opencv.cpp
clc_test_gazebo/: CMakeLists.txt  main.cpp  package.xml
clc_test_gazebo/include/: CLC.h
clc_test_gazebo/launch/: rrbot_world.launch
clc_test_gazebo/lsd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lsd_opencv  lsd_opencv.cpp
clc_test_gazebo/src/: CLC.cpp  clc_test_gazebo_node.cpp  clc_test_gazebo_node.cpp.autosave
clc_test_gazebo/urdf/: .rrbot.gazebo.swp  materials.xacro  rrbot.gazebo  rrbot.xacro
clc_test_gazebo/worlds/: rrbot.world
rrbot_control/config/: rrbot_control.yaml
